--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,12 @@ button:hover {
     color: #f5f5f5;
 }
 
+#ver-mapa button{
+    width: 80px;
+    height: 30px;
+    margin: 2px;
+}
+
 #btt-mascota {
     margin-top: 20px;
 }
